--- a/create.html
+++ b/create.html
@@ -17,13 +17,16 @@
                     <img class="firebase-logo" src="images/firebase-logo.png">
                     <h1 class="title">Firebase!</h1>
                 </div>
-                <div class="divider">
                 </div>
+                <div class="divider">
                 </div>
             <form id="sign-up">
                 <h2 class="text-center text-white">Create New Account:</h2>
                 <div id="bad-login" class="alert alert-danger" role="alert">
-                    Error. Please try again.
+                    Error. Account may already exist. Please try again.
+                </div>
+                <div id="bad-password" class="alert alert-danger" role="alert">
+                  Error. Passwords do not match. Please try again.
                 </div>
                 <div class="form-group">
                   <label for="sign-up-email">Email address</label>
@@ -34,7 +37,11 @@
                   <label for="sign-up-password">Password</label>
                   <input type="password" class="form-control" id="sign-up-password" placeholder="Password">
                 </div>
-                <button type="submit" class="btn btn-secondary">Sign In</button>
+                <div class="form-group">
+                  <label for="sign-up-password2">Confirm Password</label>
+                  <input type="password" class="form-control" id="sign-up-password2" placeholder="Confirm Password">
+                </div>
+                <button type="submit" class="btn btn-secondary">Create Account</button>
               </form>
                 <div class="divider">
                 </div>
@@ -66,6 +73,7 @@
     </script>
 
     <script>
+
      // Your web app's Firebase configuration
     var firebaseConfig = {
     apiKey: "AIzaSyAgzAsV_UpScN4wlOAvkiWJKpUyLBNiNwc",
@@ -81,14 +89,24 @@
 
     $(document).on('submit', '#sign-up', function(event){
         event.preventDefault();
+        if($('#sign-up-password').val() === $('#sign-up-password2').val()){
         firebase.auth().createUserWithEmailAndPassword($('#sign-up-email').val(), $('#sign-up-password').val()).catch(function(error) {
             // Handle Errors here.
             var errorCode = error.code;
             var errorMessage = error.message;
             console.log($('#sign-in-email').val());
             console.log($('#sign-in-password').val());
+            firebase.auth().onAuthStateChanged(function(user){
+            if(!user){
+            $('#bad-login').css('display', 'block');
+            }
+            });
             //alert('submitted');
     });
+        }
+        else{
+          $('#bad-password').css('display', 'block');
+        }
     });
 
     firebase.auth().onAuthStateChanged(function(user) {
